--- a/scss/modulos/_sombras.scss
+++ b/scss/modulos/_sombras.scss
@@ -9,7 +9,6 @@
   height: 100%;
   left: 5px;
   top: 5px;
-  filter : blur(5px);
     -webkit-clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
     clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
     @supports (display: grid) {
