--- a/scss/parciales/_queries.scss
+++ b/scss/parciales/_queries.scss
@@ -28,7 +28,7 @@
         body .main {
         overflow: hidden;
         grid-template-columns: 1fr 18fr 18fr 1fr;
-        grid-template-rows: 100vh 500px 580px 720px 580px;
+        grid-template-rows: 102vh 500px 580px 720px 580px;
         grid-template-areas:
         "portada portada portada portada"
         "sobreMi sobreMi sobreMi ."
